# KANBANCOACH

./: .gitignore  HANDOFF_PHASE6A_MR_KANBAN.md  HANDOFF_PHASE6B_LOCAL_MODEL_TOOLS.md  IDEA.md  README.md  pyproject.toml  requirements.txt
config/: matching_stopwords.json  project_aliases.json  settings.example.json
scripts/: install_requirements.bat  validate_phase0.bat  validate_phase1.bat  validate_phase2.bat  validate_phase3.bat  validate_phase4a.bat  validate_phase4b.bat
src/sami_kanban_coach/: __init__.py  apply_engine.py  apply_models.py  cli.py  coach_chat.py  config.py  draft_engine.py  draft_models.py  email_context_loader.py  evidence_pipeline.py  evidence_regression_test.py  kanban_indexer.py  kanban_models.py  kanban_reader.py  local_ai_adviser.py  logging_setup.py  mailbox_search.py  matching_engine.py  models.py  ollama_client.py  outlook_com.py  path_safety.py  pilot_engine.py  review_engine.py  review_models.py  review_tui.py  storage.py  team_context_sync.py  validation.py
tests/: test_coach_chat.py
