[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sami-kanban-coach"
version = "0.1.0"
description = "Phase 0: Outlook Email Recall Cache for SAMI Kanban Coach"
requires-python = ">=3.11"
dependencies = [
    "pywin32",
    "typer",
    "rich",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]
